<resources>
    <string name="app_name" translatable="false">Floating Car</string>

    <string name="bluetooth_device_key" translatable="false">bluetoothDeviceKey</string>

    <string name="bluetooth_not_found_error">Couldn\'t find a Bluetooth Adapter</string>
    <string name="bluetooth_not_enabled">Bluetooth not enabled.</string>
    <string name="notification_content_title">Logging your trip</string>
    <string name="bluetooth_connected_starting_logging">Connected to %1$s - %2$s. Starting to log.</string>
    <string name="bluetooth_connecting_errror">Error connecting to bluetooth device %1$s - %2$s.</string>
    <string name="bluetooth_enabled_message">Bluetooth enabled. Click to start logging.</string>
    <string name="start_day_time">%1$s, %2$s</string>
    <string name="start_date">%1$s %2$s</string>
    <string name="trip_samples">%1$d samples</string>
    <string name="title_activity_trip_details">TripDetailsActivity</string>
    <string name="trip_duration">%1$d m</string>
    <string name="vehicle">Vehicle</string>
    <string name="placehold_str" translatable="false">---</string>
    <string name="location">Location</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="duration_placehold_str" translatable="false">40 min</string>
    <string name="distance_placehold_str" translatable="false">350 km</string>
    <string name="samples_placehold_str" translatable="false">524 samples</string>
    <string name="daytime_placehold_str" translatable="false">Monday, 11:32</string>
    <string name="date_placehold_str" translatable="false">January 9th</string>
    <string name="rpm_placehold_str" translatable="false">1200 rpm</string>
    <string name="speed_placehold_str" translatable="false">60 km/h</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_trip_logging_activity" translatable="false">TripLoggingActivity</string>
</resources>
